Add terminal frame with cyan HUD accents

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="terminal">
+  <div id="terminal-frame">
+    <div id="terminal">
     <div id="output"></div>
     <div class="input-line">
       <span class="prompt">&gt;</span>
       <input id="commandInput" autofocus autocomplete="off" />
+      </div>
     </div>
   </div>
 
