Implement boot sequence with typed intro

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="boot-screen">
+    <div id="boot-text"></div>
+  </div>
+  
   <div id="terminal-frame">
     <div id="terminal">
     <div id="output"></div>
