handle window resize for binary background canvas

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 <body>
   <div id="boot-screen">
-    <div id="boot-text"></div>
-  </div>
-  
+  <canvas id="binary-bg"></canvas>
+  <div id="boot-text"></div>
+</div>
+
   <div id="terminal-frame">
     <div id="terminal">
     <div id="output"></div>
